Add first pages for static site

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Syntra web development course
+description: Material for the course frontend web development year 2 @ Syntra
