--- a/3. Intro to Express/2. Crud API/.env
+++ b/3. Intro to Express/2. Crud API/.env
@@ -1,1 +1,3 @@
 PORT=3000
+REACT_APP_FIREBASE_DATABASE_URL=https://syntra-c9810-default-rtdb.europe-west1.firebasedatabase.app
+REACT_APP_FIREBASE_API_KEY=AIzaSyC_Pb07jdsorNJrLqmVy81EtUav-BCg0yc
