--- a/3. Intro to Express/2. Crud API/package.json
+++ b/3. Intro to Express/2. Crud API/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "swagger-ui-express": "^4.3.0"
+    "firebase": "^9.6.7",
+    "swagger-ui-express": "^4.3.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
