--- a/3. Intro to Express/2. Crud API/package.json
+++ b/3. Intro to Express/2. Crud API/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "firebase": "^9.6.7",
+    "jsonwebtoken": "^8.5.1",
     "swagger-ui-express": "^4.3.0",
     "uuid": "^8.3.2"
   },
